added blue background design

--- a/non-interactive/Bonsai-Pricing-Page/index.html
+++ b/non-interactive/Bonsai-Pricing-Page/index.html
@@ -23,6 +23,7 @@
     </header>
 
     <main>
+        <div class="blueImg"></div>
         <section class="toggle">
             <h1>Plans & Pricing</h1>
             <div class="toggleMode">
