--- a/non-interactive/Monogram/index.html
+++ b/non-interactive/Monogram/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <div class="logo">
             <img src="logo.svg" alt="Logo">
@@ -20,7 +21,7 @@
                 <li>BLOG</li>
                 <li>SUPPORT</li>
                 <li><b>SHOP</b></li>
-                <li>
+                <li class="shopping">
                     <img src="shoppingCart.svg" alt="shopping cart">
                     <form action="" method="post">
                         <label for="currency">Currency</label>
@@ -34,12 +35,14 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
     </main>
+
     <footer>
 
     </footer>
