finished first section

--- a/non-interactive/Monogram/index.html
+++ b/non-interactive/Monogram/index.html
@@ -37,10 +37,21 @@
     </header>
 
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="firstSection">
+            <h1>A CONSOLE FOR<br>EVERY WORKFLOW</h1>
+            <h2>Discover the perfect console for yours.</h2>
+            <img src="ramiro-mendes-CjS3QsRuxnE-unsplash.jpg" alt="Background Image" class="bg">
+            <a href="#secondSection"><img src="arrow.svg" alt="arrow.svg" class="arrow"></a>
+        </section>
+        <section id="secondSection">
+
+        </section>
+        <section class="thirdSection">
+
+        </section>
+        <section class="fourthSection">
+
+        </section>
     </main>
 
     <footer>
