--- a/non-interactive/Monogram/index.html
+++ b/non-interactive/Monogram/index.html
@@ -43,13 +43,168 @@
             <img src="ramiro-mendes-CjS3QsRuxnE-unsplash.jpg" alt="Background Image" class="bg">
             <a href="#secondSection"><img src="arrow.svg" alt="arrow.svg" class="arrow"></a>
         </section>
-        <section id="secondSection">
+        <section id="secondSection" class="secondSection">
+
+            <div class="product a">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>MINI CONSOLE</h3>
+                            <p>Ideal for everyday shortcuts. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$249</span>
+                </div>
+            </div>
+
+            <div class="product b">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>AUDIO CONSOLE</h3>
+                            <p>Ideal for Music and Audio. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$499</span>
+                </div>
+            </div>
+
+            <div class="product c">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>PHOTO CONSOLE</h3>
+                            <p>Ideal for photo and video. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$599</span>
+                </div>
+            </div>
+
+            <div class="product d">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
 
         </section>
         <section class="thirdSection">
-
+            <h4>CREATE YOUR OWN CONSOLE</h4>
+            <h5>Add-on to make it perfect.</h5>
         </section>
         <section class="fourthSection">
+
+            <div class="product">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
+
+            <div class="product">
+                <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
+                <div class="productDescription">
+                        <div class="text">
+                            <h3>VIDEO CONSOLE</h3>
+                            <p>Ideal for video and film. Adaptable to any workflow.</p>
+                        </div>
+                        <span class="price">$899</span>
+                </div>
+            </div>
 
         </section>
     </main>
