finished fourth section and skeleton of footer

--- a/non-interactive/Monogram/index.html
+++ b/non-interactive/Monogram/index.html
@@ -96,7 +96,7 @@
         </section>
         <section class="fourthSection">
 
-            <div class="product">
+            <div class="product e">
                 <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
                 <div class="productDescription">
                         <div class="text">
@@ -107,7 +107,7 @@
                 </div>
             </div>
 
-            <div class="product">
+            <div class="product f">
                 <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
                 <div class="productDescription">
                         <div class="text">
@@ -118,7 +118,7 @@
                 </div>
             </div>
 
-            <div class="product">
+            <div class="product g">
                 <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
                 <div class="productDescription">
                         <div class="text">
@@ -129,7 +129,7 @@
                 </div>
             </div>
 
-            <div class="product">
+            <div class="product h">
                 <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
                 <div class="productDescription">
                         <div class="text">
@@ -140,7 +140,7 @@
                 </div>
             </div>
 
-            <div class="product">
+            <div class="product i">
                 <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
                 <div class="productDescription">
                         <div class="text">
@@ -151,7 +151,7 @@
                 </div>
             </div>
 
-            <div class="product">
+            <div class="product j">
                 <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
                 <div class="productDescription">
                         <div class="text">
@@ -162,7 +162,7 @@
                 </div>
             </div>
 
-            <div class="product">
+            <div class="product k">
                 <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
                 <div class="productDescription">
                         <div class="text">
@@ -173,7 +173,7 @@
                 </div>
             </div>
 
-            <div class="product">
+            <div class="product l">
                 <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
                 <div class="productDescription">
                         <div class="text">
@@ -184,7 +184,7 @@
                 </div>
             </div>
 
-            <div class="product">
+            <div class="product m">
                 <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
                 <div class="productDescription">
                         <div class="text">
@@ -195,7 +195,7 @@
                 </div>
             </div>
 
-            <div class="product">
+            <div class="product n">
                 <div class="pic"><span class="preorderBanner">PRE-ORDER</span></div>
                 <div class="productDescription">
                         <div class="text">
@@ -210,7 +210,53 @@
     </main>
 
     <footer>
+        <ul>
+            <li>MONOGRAM</li>
+            <li>305 King St. W.</li>
+            <li>Suite 502</li>
+            <li>Kitchener, ON</li>
+            <li>Canada</li>
+        </ul>
+        <ul>
+            <li>QUICK LINKS</li>
+            <li>Home</li>
+            <li>How it Works</li>
+            <li>Shop</li>
+            <li>Download</li>
+        </ul>
+        <ul>
+            <li>HELP</li>
+            <li>FAQ's</li>
+            <li>Support Center</li>
+            <li>Shipping and Sales</li>
+        </ul>
+        <ul>
+            <li>INFORMATION</li>
+            <li>About us</li>
+            <li>Privacy Policy</li>
+            <li>Work with us</li>
+            <li>Terms of Use</li>
+            <li>Terms of Sale</li>
+            <li>Press Kit</li>
+        </ul>
+        <ul>
+            <li>SUBSCRIBE TO MONOGRAM</li>
+            <li>
+                <div>
+                    <p></p>
+                    <form action="">
 
+                    </form>
+                    <div>
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </li>
+            <li>Monogram 2023</li>
+        </ul>
     </footer>
 </body>
 </html>
