finished Monogram layout

--- a/non-interactive/Monogram/index.html
+++ b/non-interactive/Monogram/index.html
@@ -243,15 +243,16 @@
             <li>SUBSCRIBE TO MONOGRAM</li>
             <li>
                 <div>
-                    <p></p>
-                    <form action="">
-
+                    <p>Master productivity with creative console and get<br>all the latest Monograms</p>
+                    <form action="" method="post">
+                        <input type="email" name="email" required placeholder="Email Address">
+                        <button type="submit">SUBMIT</button>
                     </form>
-                    <div>
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
+                    <div class="socials">
+                        <span>FB</span>
+                        <span>X</span>
+                        <span>IG</span>
+                        <span>YT</span>
                     </div>
                 </div>
             </li>
